--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,32 +12,24 @@ services:
     volumes:
       - ./serp_webapp:/var/www
 
-  swag:
-    image: lscr.io/linuxserver/swag
-    container_name: swag
-    cap_add:
-      - NET_ADMIN
-    env_file:
-      - ./.env
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - VALIDATION=http
-    volumes:
-      - ./config:/config
-      - ./serp_webapp:/var/serp_webapp
-    ports:
-      - 443:443
+
+  webserver:
+    image: nginx:1.18-alpine
+    container_name: webserver
+    restart: always
+    ports: 
       - 80:80
-    restart: on-failure
+    volumes:
+      - ./config:/etc/nginx/conf.d
+      - ./serp_webapp:/var/serp_webapp
 
   mysql:
     image: mysql
     container_name: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: smartErp@Jan11
+    env_file:
+     - ./.env 
     volumes:
       - ./data:/var/lib/mysql
     ports:
